{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 8,
  "lineage": "f607327d-1cc3-d71f-04cc-43ba22d68999",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047126e50991d067b",
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:instance/i-015eaff692eb53af6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015eaff692eb53af6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "task1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01fcdc6bc158cceb9",
            "private_dns": "ip-10-0-1-212.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.212",
            "public_dns": "ec2-54-255-212-146.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.212.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:855619710027:key/db29e07f-a028-445d-9fa9-29bb30d9366a",
                "tags": {
                  "Environment": "Dev",
                  "Name": "task1-root-volume",
                  "Project": "Task1"
                },
                "tags_all": {
                  "Environment": "Dev",
                  "Name": "task1-root-volume",
                  "Project": "Task1"
                },
                "throughput": 125,
                "volume_id": "vol-0b8269325d679c135",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0653b381effc3b4b9",
            "tags": {
              "Environment": "Dev",
              "Name": "task1",
              "Project": "Task1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "task1",
              "Project": "Task1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e02e3ff5abb99f5"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:internet-gateway/igw-0743d7d079b532d99",
            "id": "igw-0743d7d079b532d99",
            "owner_id": "855619710027",
            "tags": {
              "Environment": "Dev",
              "Name": "main-igw",
              "Project": "Task1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "main-igw",
              "Project": "Task1"
            },
            "vpc_id": "vpc-0ec530fb9e3fe2883"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:route-table/rtb-0320e25031b256dd7",
            "id": "rtb-0320e25031b256dd7",
            "owner_id": "855619710027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0743d7d079b532d99",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "public-rt",
              "Project": "Task1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "public-rt",
              "Project": "Task1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec530fb9e3fe2883"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046235b4fb7aaf680",
            "route_table_id": "rtb-0320e25031b256dd7",
            "subnet_id": "subnet-0653b381effc3b4b9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:security-group/sg-06e02e3ff5abb99f5",
            "description": "Security group for Task1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e02e3ff5abb99f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Task1-sg",
            "name_prefix": "",
            "owner_id": "855619710027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "task1-sg",
              "Project": "Task1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "task1-sg",
              "Project": "Task1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec530fb9e3fe2883"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:subnet/subnet-0653b381effc3b4b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0653b381effc3b4b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855619710027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "public-subnet",
              "Project": "Task1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "public-subnet",
              "Project": "Task1"
            },
            "vpc_id": "vpc-0ec530fb9e3fe2883"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:vpc/vpc-0ec530fb9e3fe2883",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0811ebbf9ec59e228",
            "default_route_table_id": "rtb-07f5c4ef3c74bf1fe",
            "default_security_group_id": "sg-011338b3bdd940932",
            "dhcp_options_id": "dopt-08a36b309353d1ac8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec530fb9e3fe2883",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f5c4ef3c74bf1fe",
            "owner_id": "855619710027",
            "tags": {
              "Environment": "Dev",
              "Name": "main-vpc",
              "Project": "Task1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "main-vpc",
              "Project": "Task1"
            }
          }
        }
      ]
    }
  ]
}